kubernetes/apps/test-ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ingress
  labels:
    pod-security.kubernetes.io/enforce: privileged
